fixed nav bar overlap issue

--- a/styles/default.css
+++ b/styles/default.css
@@ -31,16 +31,14 @@ main
 
 nav
 {
-    display:flex;
-    justify-content: center;
-    margin-top:0;
+    margin:0 auto;
     padding:0;
 }
 
 a
 {
     color:orange;
-    font-size:20px;
+    font-size: 1rem;
     margin-right:30px;
     text-decoration:none;
 }
